--- a/html/index.html
+++ b/html/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>U1-W2-D2</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>U1-W2-D2</h1>
+      <h2>Esercizio JavaScript Items, Array, If/Else</h2>
+    </header>
     <main></main>
     <footer></footer>
     <script src="/script/D2.js"></script>
